# time_domain_modal_estimation

./: .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  tests.yml
docs/: .gitignore  README.md  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  license.rst  quickstart.rst  references.rst  theory.rst
docs/api/: complex_exp.rst  era.rst  modules.rst
examples/: basic_usage.py  demo_cea.py  demo_era.py
src/time_domain_modal_estimation/: __init__.py  complex_exp.py  era.py
tests/: __init__.py  test_demo_params.py  test_era.py  test_phase.py  test_simple.py  test_two_modes.py
