[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-domain-modal-estimation"
version = "0.1.0"
description = "Time domain modal estimation techniques including Complex Exponential Algorithm (CEA)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Ashley S. Dale", email = "trustworthyai4sci@gmail.com"}
]
keywords = ["modal analysis", "structural dynamics", "signal processing", "CEA", "time domain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.24",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/daleas0120/time_domain_modal_estimation"
Documentation = "https://github.com/daleas0120/time_domain_modal_estimation"
Repository = "https://github.com/daleas0120/time_domain_modal_estimation"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
time_domain_modal_estimation = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
